@@ -95,3 +95,4 @@
 14-Dec-2020  - V0.94 Add option to suppress stderr output in ExecUtils()
 28-Dec-2020  - V0.95 Catch empty directory in mkdirForFile()
 20-Jan-2021  - V0.96 Adding IndexUtils() as a potentially temporary placement for this module.
+24-Jan-2021  - V0.97 Update error logging in ExecUtils(), add sort() method to IndexBase()
